testdata/baselines/reference/submodule/compiler/commonJsExportTypeDeclarationError.errors.txt
types1.ts(3,1): error TS1005: '=' expected.
types2.ts(3,1): error TS1110: Type expected.
types3.ts(2,13): error TS2456: Type alias 'test' circularly references itself.


==== test.js (0 errors) ====
    module.exports = {
       message: ""
    }
    
==== types1.ts (1 errors) ====
    import test from "./test";
    export type test
    
    
!!! error TS1005: '=' expected.
==== types2.ts (1 errors) ====
    import test from "./test";
    export type test = 
    
    
!!! error TS1110: Type expected.
==== types3.ts (1 errors) ====
    import test from "./test";
    export type test = test;
                ~~~~
!!! error TS2456: Type alias 'test' circularly references itself.
    